--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en-US">
 
@@ -242,10 +241,10 @@ appointment:{},
 
             <div class="row"><div class="span24 special-box"><div class="row">
 <div class="span17 offset1"></p>
-<h3>would you Like to Evaluate <b>BETA</b> version?</h3>
+<h3>Tele-Clinic <b>BETA</b> is ready</h3>
 <p>
 </div>
-<div class="span5 "><p><a class="button request-button" href="http://www.teleclinic.im:8080/openmrs/module/patientnarratives/patientNarrativesForm.form">Access now!</a></p>
+<div class="span5 "><p><a class="button request-button" target="_blank" href="http://channel.teleclinic.im/openmrs/module/patientnarratives/patientNarrativesForm.form">Channel now!</a></p>
 </div>
 </div></div></div>
 <!--<div class="row"><div class="span24 why-us"><div class="row">-->
